<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">airZoon</string>
    <string name="fb_app_id">743222562429147</string>
    <string name="title_activity_maps">Map</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="tt_p1_header_text">All hotspots in one app !</string>
    <string name="tt_p1_footer_text">"airZoon displays the best wifi hotspots around you. You can search by hotspot name, city, address..."</string>

    <string name="tt_p2_header_text">Choose the best hotspot that fit to your needs !</string>
    <string name="tt_p2_footer_text">"The mobile app displays all the available hotspots around even if they are not in the airZoon network. Use the filter to choose your hotspot categories (restaurants, bars, gym center..)"</string>

    <string name="tt_p3_header_text">airZoon wifi is forever free !</string>
    <string name="tt_p3_footer_text">"airZoon offers you a free, unlimited stable and secured wifi internet access. Reach a airZoon hotspots to enjoy the experience."</string>

    <string name="tt_p4_header_text">Never lose your datas !</string>
    <string name="tt_p4_footer_text">"Connect your Facebook or Twitter account to backup your favorites in our cloud."</string>
    <string name="title_activity_air_zoon_map">Map</string>

    <string name="p2_body_string_3_types">3 types of hotspot.. </string>
    <string name="airZoonText">airZoon</string>
    <string name="freeText">Free</string>
    <string name="paidText">Paid</string>

    <string name="serveralCatText">Several categories</string>
    <string name="barText">Bar</string>
    <string name="fastFoodText">Fast-Food</string>
    <string name="airportText">Airport</string>
    <string name="unlimitedText">Unlimited</string>
    <string name="reliableText">Reliable</string>
    <string name="secureHotSpotText">and Secured Hotspots!</string>
    <string name="go_text">GO</string>

    <string name="noNameText">No Name</string>
    <string name="facebookText">Facebook</string>
    <string name="twitterText">Twitter</string>
    <string name="noEmailAddressText">No Email Address</string>
    <string name="noPhoneNumText">No Phone no.</string>
    <string name="privateInfoText">private information</string>
    <string name="editProfileText">Edit profile</string>

    <string name="searchText">Search</string>
    <string name="enterYourSearchText">Enter your search(Hotspot name etc..)</string>

    <string name="allHotspotText">All Hotspot</string>
    <string name="airzoonHotspotText">Airzoon Hotspot</string>
    <string name="freeHotSpotText">Free Hotspot</string>
    <string name="paidHotspotText">Paid Hotspot</string>

    <string name="settingsText">Settings</string>
    <string name="doneText">Done</string>

    <string name="searchResultText">Search Results</string>
    <string name="submitAHotspotText">Submit a Hotspot</string>
    <string name="notSuchHotspotFoundText">No such Hotspot found</string>
    <string name="guideText">"Manually sync the airZoon database to update the hotspots list for offline usage."</string>

    <!--About us text-->
    <string name="aboutUsText">About us</string>
    <string name="versionText">Version 1.0</string>
    <string name="aboutUsBody1">airZoon gives you the weather of the WIFI. Find the best hotspot that fit your needs.</string>
    <string name="aboutUsBody2">airZoon hotspots are free, unlimited and secured.</string>
    <string name="sendAFeedbackText">Send a Feedback</string>
    <string name="watchTheGuidedTourText">Watch the Guided Tour</string>


    <!--Feedback-->
    <string name="feedbackText">Feedback</string>
    <string name="enterUserNameText">No name</string>
    <string name="enterEmailHintText">No email address</string>
    <string name="writeYourCommentHintText">Write your comment</string>
    <string name="submitText">Submit</string>
    <string name="saveText">Save</string>

    <!--Feedback-->
    <string name="favoritesText">Favorites</string>

    <!--Hotspot details screen-->
    <string name="goText">Go</string>
    <string name="callText">Call</string>
    <string name="openingText">Opening</string>
    <string name="requestAnErrorText"><u>Report an error/Request informations</u></string>
    <string name="shareStringText">Share</string>
    <!--Share intenet text-->
    <string name="shareText">"Free, unlimited and secured wifi hotspots with @airZoonWifi >> "</string>
    <string name="urlText">"http://airzoon.com/"</string>
    <!--<string name="imgDownloadUrlText">"http://stevebercy.com/airzoon/img/"</string>-->


    <!--Report issue-->
    <string name="reportText">Report</string>
    <string name="errorText">Error</string>
    <string name="requestInfoText">Request Info.</string>
    <string name="nameText">Name</string>
    <string name="addressText">Address</string>
    <string name="categoryText">Category</string>
    <string name="hoursText">Hours</string>
    <string name="phoneText">Phone</string>
    <string name="speedText">Speed</string>
    <string name="sendText">Send</string>
    <string name="dontMindText">"Don't mind"</string>

    <!--New spot-->
    <string name="newSpotText">New Spot</string>
    <string name="enterSpotNameHintText">Enter Spot Name</string>
    <string name="selectHotspotTypeHintText">Select Hotspot Type</string>
    <string name="selectHotspotCatHintText">Select Hotspot Category</string>
    <string name="enterPhoneNoHintText">No Phone no.</string>
    <string name="addAnImageText">Add an image</string>
    <string name="cancelText">Cancel</string>

    <string name="cloudBackupText">Cloud Backup</string>
    <string name="genderMaleText">Male</string>
    <string name="genderFeMaleText">Female</string>

    <string name="connectedText">Connected</string>

    <string name="syncedSuccessFulText">Synced Successfully.</string>

    <string name="addedToFavText">Added to Favorites.</string>
    <string name="removedFromFavText">Removed from Favorites.</string>
    <string name="loginErrorText">Please link to facebook or twitter.</string>
    <string name="profilePicDownloadFailedText">Profile pic Download failed.</string>
    <string name="profilePicNotFoungText">Profile Pic not found.</string>
    <string name="contactNumNotFoundText">Contact number not found.</string>
    <string name="provideCallingPermsnText">Provide Calling permission.</string>
    <string name="pleaseWaitText">Please wait..</string>
    <string name="logoutSuccessfullyText">Logout successfully</string>
    <string name="welcomeText">Welcome</string>
    <string name="lastSyncText">Last sync:</string>
    <string name="savedSuccessfulText">User updated successfully</string>

    <string name="catAirport">Airport</string>
    <string name="catBar">Bar</string>
    <string name="catBarber">Barber</string>
    <string name="catFastFood">"Fast-food &amp; Snack"</string>
    <string name="catHotel">Hotel</string>
    <string name="catMall">Mall</string>
    <string name="catOther">Other</string>
    <string name="catPancakesWaffles">"Pancakes &amp; Waffles"</string>
    <string name="catRestaurant">Restaurant</string>
    <string name="catSportCenter">Sport Center</string>
    <string name="catHealthAndWellness">"Health &amp; Wellness"</string>


    <string name="errorEnterName">Please enter your name</string>
    <string name="errorEnterEmailId">No email id found</string>
    <string name="errorEnterCorrectEmailId">Please provide valid email id</string>
    <string name="errorEnterComment">Please enter comment</string>
    <string name="errorEnterContactNum">Please enter your contact number</string>
    <string name="errorEnterCorrectNum">Please provide valid phone number</string>
    <string name="errorcheckInternetConection">Oups..no internet connection</string>
    <string name="updatingUserProfileText">Updating your profile..</string>
    <string name="postingUserProfileText">"Posting your profile.."</string>
    <string name="sendingYourFeedbackText">"Sending your valuable feedback.."</string>
    <string name="addingFavouriteText">Adding to your favourite...</string>
    <string name="removingFavouriteText">Removing from your favourite...</string>
    <string name="errorEnterHotSpotName">Please enter hotspot name</string>
    <string name="errorEnterHotSpotNum">Please provide hotspot contact number</string>
    <string name="errorEnterHotSpotAddress">Please enter hotspot address</string>
    <string name="postingNewHotspotText">Posting new hotspot..</string>
    <string name="reportingIssueText">Reporting your issue..</string>
    <string name="fetchingAddressText">Fetching Address..</string>
    <string name="addressNotFoundText">Unable to find address..</string>
    <string name="issuesReportedSuccessfullyText">"Thank you, your informations will be processed soon.."</string>
    <string name="youHaveNotReportedAnEntryText">"You have not reported an entry"</string>


    <string name="selectPictureText">"Select picture via"</string>
    <string name="gallaryText">Gallery</string>
    <string name="cameraText">Camera</string>


    <string name="janText">Jan</string>
    <string name="fabText">Feb</string>
    <string name="marText">Mar</string>
    <string name="aprText">Apr</string>
    <string name="mayText">May</string>
    <string name="juneText">Jun</string>
    <string name="julyText">Jul</string>
    <string name="augText">Aug</string>
    <string name="sepText">Sep</string>
    <string name="octText">Oct</string>
    <string name="novText">Nov</string>
    <string name="decText">Dec</string>

    <string name="alertText">Alert</string>
    <string name="YesLogoutText">Yes Logout</string>
    <string name="YesText">Yes</string>
    <string name="NoText">No</string>
    <string name="areYouSureLogoutText">Are you sure you want to logout?</string>
    <string name="loadingText">Loading...</string>
    <string name="signInText">Sign in</string>
    <string name="reportErrorResponse">Thank you, your informations will be processed soon..</string>
    <string name="feedbackResponse">Thank you for your feedback, we will process it soon...</string>
    <string name="settingSavedText">Settings saved.</string>

    <string name="pleaseFillText">Please fill the following fields: </string>
    <string name="spotNameText">Spot Name </string>
    <string name="contactNumText">Contact number</string>
    <string name="streetAddressText">Street Address</string>


    <string name="enableGPSText">Enable GPS</string>
    <string name="enableGPSBody">The app needs GPS to be enabled do you want to enable it in the settings?</string>
    <string name="settingsGPSText">Settings</string>

    <string name="privacyPolicyText">Privacy Policy</string>

</resources>
