<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:alpha="0.87"
        android:background="@drawable/dailog_shape_white">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/closeProfileImageView"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_alignParentRight="true"
                android:background="?android:selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/close1" />

            <ImageView
                android:id="@+id/aboutUsHeaderImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/aboutUsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/aboutUsHeaderImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/aboutUsText"
                android:textAllCaps="true"
                android:textColor="@color/Gray"
                android:textSize="27dp" />

            <TextView
                android:id="@+id/versionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/aboutUsTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/versionText"
                android:textAllCaps="true"
                android:textColor="@color/Black"
                android:textSize="18dp" />

            <View
                android:id="@+id/sepraterView"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_below="@+id/versionTextView"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:background="@color/Gray" />

            <RelativeLayout
                android:id="@+id/bodyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sepraterView"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/bodyText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/aboutUsBody1"
                    android:textColor="@color/Black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/bodyText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bodyText1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/aboutUsBody2"
                    android:textColor="@color/Black"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/bodyText2"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="55dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fbBtnTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:drawableLeft="@drawable/fb"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/facebookText"
                        android:textAllCaps="true"
                        android:textColor="@color/DarkBlue"
                        android:textSize="19dp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/versionTextView"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:alpha="0.8"
                        android:background="@color/Gray" />

                    <TextView
                        android:id="@+id/twitterBtnTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:drawableLeft="@drawable/tweet"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/twitterText"
                        android:textAllCaps="true"
                        android:textColor="@color/SkyBlue"
                        android:textSize="19dp" />


                </LinearLayout>


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/bodyLayout"
                android:layout_marginBottom="2dp"
                android:background="@color/LightGreen"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sendFeedbackBtnTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/sendAFeedbackText"
                    android:textAllCaps="true"
                    android:textColor="@color/White"
                    android:textSize="19dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/versionTextView"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/White" />

                <TextView
                    android:id="@+id/watchTheGuideBtnTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/watchTheGuidedTourText"
                    android:textAllCaps="true"
                    android:textColor="@color/White"
                    android:textSize="19dp" />


            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>