<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/backBtnImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackground"
            android:padding="15dp"
            android:src="@drawable/back" />

        <com.az.airzoon.customviews.CustomFontTextView
            android:id="@+id/topHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/searchResultText"
            android:textColor="@color/Black"
            android:textSize="22dp"
            app:sid_customFont="gotham_book" />

        <View
            android:id="@+id/seprator"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/Gray" />
    </RelativeLayout>

    <com.az.airzoon.swipe_menu.SwipeMenuListView
        android:id="@+id/hotspotListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/seprator2"
        android:layout_below="@+id/topLayout"></com.az.airzoon.swipe_menu.SwipeMenuListView>

    <com.az.airzoon.customviews.CustomFontTextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/notSuchHotspotFoundText"
        android:textColor="@color/Gray"
        android:textSize="20dp"
        android:visibility="gone"
        app:sid_customFont="gotham_book" />


    <View
        android:id="@+id/seprator2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_above="@+id/submitAHotspotButton"
        android:background="@color/Gray" />

    <Button
        android:id="@+id/submitAHotspotButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/red_btn_drawable"
        android:text="@string/submitAHotspotText"
        android:textColor="@color/OrangeRed"
        android:textSize="19dp" />

</RelativeLayout>